# websh

./: .gitignore  .stylelintrc.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  Trunk.toml  _headers  deny.toml  index.html  justfile  ledger.html  package-lock.json  package.json  playwright.config.js  render-app.jsx  render.css  render.html
crates/websh-cli/: Cargo.toml
crates/websh-cli/src/: cli.rs  lib.rs  main.rs
crates/websh-cli/src/cli/: ack.rs  attest.rs  content.rs  crypto.rs  deploy.rs  gh.rs  io.rs  ledger.rs  manifest.rs  mempool.rs  mod.rs  pgp.rs
crates/websh-cli/src/commands/: mod.rs
crates/websh-cli/src/commands/attest/: mod.rs  subject.rs
crates/websh-cli/src/commands/content/: mod.rs
crates/websh-cli/src/commands/crypto/: ack.rs  mod.rs  pgp.rs  verify_all.rs
crates/websh-cli/src/commands/deploy/: dotenv.rs  mod.rs  pinata.rs  trunk.rs
crates/websh-cli/src/commands/mempool/: add.rs  drop.rs  list.rs  mod.rs  promote.rs
crates/websh-cli/src/commands/mount/: init.rs  mod.rs
crates/websh-cli/src/infra/: gh.rs  git.rs  json.rs  mod.rs  process.rs  time.rs
crates/websh-cli/src/workflows/: mod.rs
crates/websh-cli/src/workflows/attest/: build.rs  discover.rs  gpg.rs  mod.rs  sign.rs  verify.rs
crates/websh-cli/src/workflows/content/: files.rs  frontmatter.rs  ledger.rs  manifest.rs  media.rs  mod.rs  sidecar.rs
crates/websh-cli/src/workflows/mempool/: list.rs  mod.rs  mount.rs  path.rs  promote.rs  remote.rs
crates/websh-cli/src/workflows/mount/: init.rs  mod.rs  remote.rs
crates/websh-cli/tests/: cli_crypto.rs
crates/websh-core/: Cargo.toml
crates/websh-core/src/: admin.rs  attestation.rs  config.rs  content_routes.rs  crypto.rs  errors.rs  filesystem.rs  lib.rs  mempool.rs  runtime.rs  shell.rs  theme.rs
crates/websh-core/src/attestation/: artifact.rs  ledger.rs  mod.rs  subject.rs
crates/websh-core/src/crypto/: ack.rs  eth.rs  mod.rs
crates/websh-core/src/domain/: changes.rs  explorer.rs  filesystem.rs  manifest.rs  mempool.rs  mod.rs  mount.rs  node_metadata.rs  site.rs  terminal.rs  virtual_path.rs  wallet.rs
crates/websh-core/src/engine/: mod.rs
crates/websh-core/src/engine/attestation/: artifact.rs  subject.rs
crates/websh-core/src/engine/crypto/: mod.rs  pgp.rs
crates/websh-core/src/engine/filesystem/: content.rs  content_routes.rs  intent.rs  merge.rs  mod.rs  routing.rs  snapshot.rs  tree.rs
crates/websh-core/src/engine/mempool/: form.rs  manifest_entry.rs  mod.rs  path.rs
crates/websh-core/src/engine/runtime/: boot.rs  mod.rs  state.rs
crates/websh-core/src/engine/shell/: access.rs  config.rs  mod.rs  model.rs  output.rs  pipeline.rs
crates/websh-core/src/filesystem/: content.rs  global_fs.rs  intent.rs  merge.rs  mod.rs  routing.rs
crates/websh-core/src/mempool/: form.rs  parse.rs  path.rs
crates/websh-core/src/ports/: manifest.rs  mock.rs  mod.rs  storage.rs
crates/websh-core/src/runtime/: boot.rs  commit.rs  env.rs  loader.rs  mod.rs  state.rs  wallet.rs
crates/websh-core/src/shell/: autocomplete.rs  execute.rs  filters.rs  mod.rs  result.rs
crates/websh-core/src/shell/parser/: expand.rs  lexer.rs  mod.rs
crates/websh-core/src/storage/: backend.rs  boot.rs  error.rs  idb.rs  mock.rs  mod.rs  persist.rs
crates/websh-core/src/storage/github/: client.rs  graphql.rs  manifest.rs  mod.rs  path.rs
crates/websh-core/src/support/: mod.rs
crates/websh-core/src/utils/: asset.rs  dom.rs  fetch.rs  format.rs  mod.rs  ring_buffer.rs  url.rs
crates/websh-core/tests/: commit_integration.rs  crypto_homepage.rs  mempool_compose.rs
crates/websh-web/: Cargo.toml
crates/websh-web/src/: app.rs  config.rs  lib.rs  main.rs
crates/websh-web/src/app/: boot.rs  context.rs  editor.rs  error_boundary.module.css  mod.rs  ring_buffer.rs  services.rs  state.rs
crates/websh-web/src/components/: breadcrumb.rs  icons.rs  ledger_page.module.css  ledger_page.rs  ledger_routes.rs  router.rs  wallet.rs
crates/websh-web/src/components/chrome/: mod.rs
crates/websh-web/src/components/editor/: modal.rs
crates/websh-web/src/components/explorer/: explorer.rs  file_list.rs  header.rs  mod.rs  pathbar.module.css  pathbar.rs  preview.module.css  sheet.module.css
crates/websh-web/src/components/home/: home.module.css  mod.rs  sections.rs
crates/websh-web/src/components/mempool/: commit.rs  component.rs  compose.rs  draft.rs  loader.rs  mempool.module.css  mod.rs  model.rs  parse.rs  serialize.rs
crates/websh-web/src/components/reader/: intent.rs  meta.rs  mod.rs  shell.rs  title_block.rs  toolbar.rs
crates/websh-web/src/components/shared/: file_meta.rs  identifier_strip.rs  meta_table.rs  mod.rs  mono_value.module.css  signature_footer.rs  site_frame.module.css
crates/websh-web/src/components/terminal/: boot.rs  input.rs  mod.rs  output.module.css  output.rs  shell.module.css  shell.rs  terminal.rs
crates/websh-web/src/features/: mod.rs  router.rs
crates/websh-web/src/features/chrome/: mod.rs  site_chrome.module.css
crates/websh-web/src/features/home/: home.module.css  mod.rs  model.rs  sections.rs
crates/websh-web/src/features/ledger/: mod.rs  model.rs  routes.rs
crates/websh-web/src/features/mempool/: commit.rs  component.rs  loader.rs  model.rs
crates/websh-web/src/features/reader/: document.rs  intent.rs  keybindings.rs  meta.rs  mod.rs  reader.module.css  shell.rs  title_block.rs  toolbar.rs
crates/websh-web/src/features/terminal/: actions.rs  boot.rs  hooks.rs  input.rs  mod.rs  output.module.css  output.rs  shell.rs  terminal.module.css  terminal.rs
crates/websh-web/src/platform/: asset.rs  breakpoints.rs  dom.rs  fetch.rs  mod.rs  redirect.rs  time.rs
crates/websh-web/src/render/: markdown.rs  mod.rs  theme.rs
crates/websh-web/src/runtime/: content_cache.rs  drafts.rs  idb.rs  loader.rs  mod.rs  mounts.rs  state.rs  storage_state.rs  system.rs  wallet.rs
crates/websh-web/src/runtime/github_backend/: client.rs  graphql.rs  mod.rs  path.rs
crates/websh-web/src/shared/: icons.rs  mod.rs
crates/websh-web/src/utils/: markdown.rs  mod.rs  theme.rs  wasm_cleanup.rs
src/: app.rs  (+3 more)
(+442 files in other folders)
