[package]
name = "websh"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "FocusEvent",
    "Headers",
    "History",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Location",
    "Navigator",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "Storage",
    "Window",
] }
js-sys = "0.3"
pulldown-cmark = "0.13"
ammonia = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
stylance = "0.7"
leptos_icons = "0.7"
icondata = "0.7"

[package.metadata.stylance]
output_file = "assets/bundle.css"
folders = ["src"]
extensions = [".module.css"]
hash_len = 7
class_name_pattern = "[name]-[hash]"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
