[workspace]
members = ["crates/websh-core", "crates/websh-cli", "crates/websh-web"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
alloy-primitives = { version = "1", features = ["k256", "serde"] }
unicode-normalization = "0.1"
regex = { version = "1", default-features = false, features = ["std", "perf"] }
thiserror = "2"

[package]
name = "websh"
version.workspace = true
edition.workspace = true

[dependencies]
websh-core = { path = "crates/websh-core" }
leptos = { version = "0.8", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "Document",
    "FocusEvent",
    "Headers",
    "History",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Location",
    "Navigator",
    "Node",
    "NodeList",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "Storage",
    "Touch",
    "TouchEvent",
    "TouchList",
    "Url",
    "Window",
] }
js-sys = "0.3"
comrak = { version = "0.52", default-features = false }
ammonia = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
stylance = "0.7"
leptos_icons = "0.7"
leptos-use = { version = "0.18", default-features = false, features = ["use_media_query"] }
icondata = { version = "0.7", default-features = false, features = ["bootstrap-icons", "lucide"] }
regex = { version = "1", default-features = false, features = ["std", "perf"] }
base64 = "0.22"
gloo-net = "0.6"
idb = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
hex = "0.4"
alloy-primitives = { version = "1", features = ["k256", "serde"] }
unicode-normalization = "0.1"

[dev-dependencies]
k256 = { version = "0.13", features = ["ecdsa"] }
tokio = { version = "1", features = ["macros", "rt"] }
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }
pgp = "0.19"
rand = "0.8"
serde_yaml = "0.9"
lopdf = "0.34"
imagesize = "0.13"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
mock = []

[[test]]
name = "commit_integration"
required-features = ["mock"]

[package.metadata.stylance]
output_file = "assets/bundle.css"
folders = ["src"]
extensions = [".module.css"]
hash_len = 7
class_name_pattern = "[name]-[hash]"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
