[package]
name = "websh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "websh-cli"
path = "src/main.rs"

[dependencies]
websh-core = { path = "../websh-core" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
clap = { version = "4", features = ["derive"] }
pgp = "0.19"
rand = "0.8"
serde_yaml = "0.9"
lopdf = "0.34"
imagesize = "0.13"
tokio = { version = "1", features = ["rt", "macros"] }
regex = { workspace = true }
toml = "0.8"

[dev-dependencies]
websh-core = { path = "../websh-core", features = ["mock"] }
k256 = { version = "0.13", features = ["ecdsa"] }
alloy-primitives = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
