[package]
name = "websh-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
alloy-primitives = { workspace = true }
unicode-normalization = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Blob",
    "BlobPropertyBag",
    "console",
    "Document",
    "Element",
    "Event",
    "Headers",
    "History",
    "HtmlElement",
    "Location",
    "Navigator",
    "Request",
    "RequestCache",
    "RequestInit",
    "RequestMode",
    "Response",
    "Storage",
    "Url",
    "Window",
] }
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
idb = "0.6"
serde-wasm-bindgen = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
mock = []

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
pgp = "0.19"

[[test]]
name = "commit_integration"
required-features = ["mock"]
