[package]
name = "websh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
alloy-primitives = { workspace = true, optional = true }
unicode-normalization = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom02 = { workspace = true, optional = true }

[features]
default = ["eth-verify"]
eth-verify = ["dep:alloy-primitives", "dep:getrandom02"]
mock = []

[dev-dependencies]
tokio = { workspace = true }

[[test]]
name = "commit_integration"
required-features = ["mock"]

[package.metadata.cargo-machete]
ignored = ["getrandom02"]
