[package]
name = "websh-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
debug-panic-hook = ["dep:console_error_panic_hook"]

[dependencies]
websh-core = { workspace = true }
websh-site = { workspace = true }
leptos = { workspace = true }
leptos-use = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = [
    "AbortController",
    "AbortSignal",
    "Blob",
    "BlobPropertyBag",
    "Clipboard",
    "console",
    "Document",
    "FocusEvent",
    "Headers",
    "History",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "KeyboardEvent",
    "Location",
    "Navigator",
    "Node",
    "NodeList",
    "Request",
    "RequestCache",
    "RequestInit",
    "RequestMode",
    "Response",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "Storage",
    "Touch",
    "TouchEvent",
    "TouchList",
    "Url",
    "Window",
] }
js-sys = { workspace = true }
base64 = { workspace = true }
gloo-net = { workspace = true }
futures-util = { workspace = true }
comrak = { workspace = true }
ammonia = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
stylance = { workspace = true }
gloo-timers = { workspace = true }
idb = { workspace = true }
serde-wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[package.metadata.stylance]
output_file = "../../assets/bundle.css"
folders = ["src"]
extensions = [".module.css"]
hash_len = 7
class_name_pattern = "[name]-[hash]"
